--- a/assignment2.ipynb
+++ b/assignment2.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMfcBIFda2+tYY1yHtziYNX",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyNVDXhnAaUahAmW8pV6wCk2"
     },
     "kernelspec": {
       "name": "python3",
@@ -18,13 +17,13 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/RochX/comp486-assignments/blob/main/assignment2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
+        "# Assignment 2: Work with Data\n",
+        "## COMP-486 Machine Learning"
+      ],
+      "metadata": {
+        "id": "JtAzJmz9qzL-"
+      }
     },
     {
       "cell_type": "code",
@@ -54,6 +53,16 @@
       },
       "execution_count": 24,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Question 2\n",
+        "Show the first 5 rows in the data"
+      ],
+      "metadata": {
+        "id": "hITfpl2bqemA"
+      }
     },
     {
       "cell_type": "code",
@@ -397,6 +406,95 @@
           },
           "metadata": {},
           "execution_count": 25
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Question 3\n",
+        "Get a brief description of the data."
+      ],
+      "metadata": {
+        "id": "iSL8ZIh5qpAv"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data.info()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "taJ0C51Up1sV",
+        "outputId": "3b516782-16d4-40c3-fd73-d591e51e94b6"
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 400 entries, 0 to 399\n",
+            "Data columns (total 9 columns):\n",
+            " #   Column             Non-Null Count  Dtype  \n",
+            "---  ------             --------------  -----  \n",
+            " 0   Serial No.         400 non-null    int64  \n",
+            " 1   GRE Score          400 non-null    int64  \n",
+            " 2   TOEFL Score        400 non-null    int64  \n",
+            " 3   University Rating  400 non-null    int64  \n",
+            " 4   SOP                400 non-null    float64\n",
+            " 5   LOR                400 non-null    float64\n",
+            " 6   CGPA               400 non-null    float64\n",
+            " 7   Research           400 non-null    int64  \n",
+            " 8   Chance of Admit    400 non-null    float64\n",
+            "dtypes: float64(4), int64(5)\n",
+            "memory usage: 28.2 KB\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Question 4\n",
+        "How many Universities have a rate of 4?"
+      ],
+      "metadata": {
+        "id": "aDR3zDC-qPWj"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data[\"University Rating\"].value_counts()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NYyXYYZZqISP",
+        "outputId": "e35838d7-1e1c-4d31-d634-ed8f82eb618f"
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3    133\n",
+              "2    107\n",
+              "4     74\n",
+              "5     60\n",
+              "1     26\n",
+              "Name: University Rating, dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 30
         }
       ]
     }
