--- a/assignment2/assignment2.ipynb
+++ b/assignment2/assignment2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN7KByp9OGbT6t8T4yh8vG6"
+      "authorship_tag": "ABX9TyOJrGbqUfQZSdBviv7PQUJS"
     },
     "kernelspec": {
       "name": "python3",
@@ -40,7 +40,7 @@
       "metadata": {
         "id": "ONHEnVfGmplK"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -51,7 +51,7 @@
       "metadata": {
         "id": "OgkGd3fFn4Oo"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -77,7 +77,7 @@
         "id": "s1Eu2vjWonae",
         "outputId": "ab674758-0901-4509-e932-a875f6cc16e7"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -431,7 +431,7 @@
         "id": "taJ0C51Up1sV",
         "outputId": "6f950ed2-1760-4670-8b94-3eeec880c0ba"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -479,7 +479,7 @@
         "id": "NYyXYYZZqISP",
         "outputId": "437aed40-b91b-4516-92ef-83d01e87b384"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -533,7 +533,7 @@
           "height": 300
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -953,7 +953,7 @@
           "height": 700
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1010,7 +1010,7 @@
       "metadata": {
         "id": "Nscxkonw0915"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1029,7 +1029,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1077,7 +1077,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1146,7 +1146,7 @@
           "height": 699
         }
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1195,7 +1195,7 @@
           "height": 424
         }
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1682,7 +1682,7 @@
           "height": 300
         }
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2055,6 +2055,15 @@
           "execution_count": 62
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "From running `data_scaled.describe()` we can see that the minimumn and maximum for each attribute is 0 and 1 respectively, so the minimax scaling worked."
+      ],
+      "metadata": {
+        "id": "40XerbPKZUCw"
+      }
     }
   ]
 }
