Add blurb about question 1 to notebook

--- a/assignment2/assignment2.ipynb
+++ b/assignment2/assignment2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOJrGbqUfQZSdBviv7PQUJS"
+      "authorship_tag": "ABX9TyNOA3D6gAiQJC6GgNxTgD45"
     },
     "kernelspec": {
       "name": "python3",
@@ -26,14 +26,25 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Question 1\n",
+        "Download the data."
+      ],
+      "metadata": {
+        "id": "Feeh--5AZu3U"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "from pathlib import Path\n",
         "import pandas as pd\n",
         "import urllib.request\n",
         "\n",
-        "# download the file if it does not exist\n",
+        "# download the data if it is not downloaded\n",
         "if not Path(\"adm_data.csv\").is_file():\n",
+        "  # here I download the data from my personal git repo for this class instead of using Google Drive\n",
         "  url = \"https://raw.githubusercontent.com/RochX/comp486-assignments/main/assignment2/adm_data.csv\"\n",
         "  urllib.request.urlretrieve(url, \"adm_data.csv\")"
       ],
@@ -58,7 +69,7 @@
       "cell_type": "markdown",
       "source": [
         "### Question 2\n",
-        "Show the first 5 rows in the data"
+        "Show the first 5 rows in the data."
       ],
       "metadata": {
         "id": "hITfpl2bqemA"
