Add author name

--- a/assignment2/assignment2.ipynb
+++ b/assignment2/assignment2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNOA3D6gAiQJC6GgNxTgD45"
+      "authorship_tag": "ABX9TyOGEpU5rBV37bRa7lttgtIJ"
     },
     "kernelspec": {
       "name": "python3",
@@ -18,8 +18,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Assignment 2: Work with Data\n",
-        "## COMP-486 Machine Learning"
+        "# COMP-486 Assignment 2: Work with Data\n",
+        "## Xavier Silva"
       ],
       "metadata": {
         "id": "JtAzJmz9qzL-"
