--- a/assignment3/assignment3.ipynb
+++ b/assignment3/assignment3.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNGV8b8qUq0djigXCjHoMQU"
+      "authorship_tag": "ABX9TyM1mPdO3aoyJIFeFPYjG04h"
     },
     "kernelspec": {
       "name": "python3",
@@ -3214,14 +3214,38 @@
     {
       "cell_type": "code",
       "source": [
-        "#from sklearn.model_selection import cross_val_score\n",
-        "#cross_val_score(sgd_clf_paper, X_train, y_train_5, cv=3, scoring=\"accuracy\")"
+        "from sklearn.model_selection import cross_val_score\n",
+        "cross_val_score(sgd_clf_paper, rpsTrainingPredictors, rpsTrainingLabels, cv=5, scoring=\"accuracy\")"
       ],
       "metadata": {
-        "id": "02gniTtRKdeb"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "02gniTtRKdeb",
+        "outputId": "70eca958-967a-47f7-c2f5-d69fc0dac7d4"
       },
-      "execution_count": 20,
-      "outputs": []
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0.99404762, 1.        , 0.99007937, 0.99801587, 0.99603175])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "TODO: Write observations"
+      ],
+      "metadata": {
+        "id": "wlHn8U5iyZ4E"
+      }
     },
     {
       "cell_type": "markdown",
