Add author name to title

--- a/assignment3/assignment3.ipynb
+++ b/assignment3/assignment3.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO3s/ITjl/1GXdxdKbfl4Af"
+      "authorship_tag": "ABX9TyMPGtqlJMS7eiPxeYuAAk2r"
     },
     "kernelspec": {
       "name": "python3",
@@ -19,7 +19,8 @@
       "cell_type": "markdown",
       "source": [
         "# Assignment 3\n",
-        "## Question 1\n",
+        "## Xavier Silva\n",
+        "### Question 1\n",
         "Download the rock paper sissors data."
       ],
       "metadata": {
@@ -51,7 +52,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Question 2\n",
+        "### Question 2\n",
         "\n",
         "Convert the images into a csv file using the provided code.\n",
         "\n",
@@ -188,7 +189,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Question 3\n",
+        "### Question 3\n",
         "Use `read_csv` in `pandas` to read the CSV file and assign it to a variable and print it."
       ],
       "metadata": {
@@ -832,7 +833,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Question 4\n",
+        "### Question 4\n",
         "Choose two methods to discover the data."
       ],
       "metadata": {
@@ -1390,7 +1391,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Question 5\n",
+        "### Question 5\n",
         "Make sure your training data is shuffled."
       ],
       "metadata": {
@@ -2035,7 +2036,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Question 6\n",
+        "### Question 6\n",
         "Separate the predictors (`rpsPredictors`) and the labels (`rpsLabels`) in the training set"
       ],
       "metadata": {
@@ -2508,7 +2509,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Question 7\n",
+        "### Question 7\n",
         "Display an instance's feature vector using `matplotlib`'s `imshow()` function and\n",
         "check the label for that image. (If the picture is paper, then the label should be 1, if the\n",
         "picture is a rock, then the label should be 2, and if the picture is scissors, then the label\n",
@@ -2587,7 +2588,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Question 8\n",
+        "### Question 8\n",
         "Train a binary classifier (a stochastic gradient descent (SGD)), to distinguish between just two classes, paper, and non-paper."
       ],
       "metadata": {
@@ -2668,7 +2669,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Question 9\n",
+        "### Question 9\n",
         "Try to feed your model with some instants and **explain** the output."
       ],
       "metadata": {
@@ -3316,7 +3317,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Question 10\n",
+        "### Question 10\n",
         "Use the `cross_val_score()` function to evaluate your SGDClassifier model, using $k$-fold cross-validation with five folds. **Write** your observations."
       ],
       "metadata": {
@@ -3362,7 +3363,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Question 11\n",
+        "### Question 11\n",
         "Compute the confusion matrix for your classifier and **explain** the output."
       ],
       "metadata": {
@@ -3427,7 +3428,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Question 12\n",
+        "### Question 12\n",
         "Calculate precision score, recall score and F1 score."
       ],
       "metadata": {
@@ -3517,7 +3518,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Question 13\n",
+        "### Question 13\n",
         "Use `matplotlib` to plot precision and recall as functions of the threshold value.\n",
         "**Write** your observations."
       ],
@@ -3636,7 +3637,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Question 14\n",
+        "### Question 14\n",
         "For what threshold you can get 95% precision?"
       ],
       "metadata": {
@@ -3754,7 +3755,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Question 15\n",
+        "### Question 15\n",
         "plot the ROC curve (FPR against the TPR) using `matplotlib` then calculate the area under the curve (AUC). Is your classifier perfect? Why?"
       ],
       "metadata": {
@@ -3865,7 +3866,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Question 16\n",
+        "### Question 16\n",
         "Train an SGDClassifier on a multiclass dataset and use it to make predictions."
       ],
       "metadata": {
@@ -3986,7 +3987,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Question 17\n",
+        "### Question 17\n",
         "Plot the confusion matrix for your multiclass classifier and **explain** the output."
       ],
       "metadata": {
@@ -4061,7 +4062,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Question 18\n",
+        "### Question 18\n",
         "Plot Confusion matrix with errors only, normalized by row and confusion matrix with errors only by column. **Explain one output for each.**"
       ],
       "metadata": {
