Finish setting up all questions

--- a/assignment4/assignment4.ipynb
+++ b/assignment4/assignment4.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOV6DIQEKM+x5cZQTAJXMY1",
+      "authorship_tag": "ABX9TyOoHOJOgQniIEruxElUxO6T",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -71,7 +71,7 @@
       "metadata": {
         "id": "bpf7gYkwwqPy"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -88,7 +88,7 @@
         "id": "Ufj21MOawuAd",
         "outputId": "ec15e0bf-23ed-44b7-a90f-7136520dc97b"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -765,11 +765,72 @@
     {
       "cell_type": "markdown",
       "source": [
-        "TODO: Finish up writing rest of part 3 questions."
+        "### Question 1\n",
+        "Use the same data (Rock-Paper-Scissor” dataset) in part 2 (training data and test data) to train multiclass classifiers using Softmax Regression, Polynomial Kernel SVM (degree=10, coef0=1, C=5), and Polynomial Kernel SVM with your suggested values.\n",
+        "For each model:\n",
+        "1. Predict $\\hat{y}$ for some new instances (`X_new`) where (`X_new = Xtrain[88], Xtrain[2159], Xtrain[1346]`).\n",
+        "2. Find the probability that the model used to predict the class of an instance (if applicable).\n",
+        "3. Calculate the score (using the test set)\n",
+        "4. What are the `decision_function` values?\n",
+        "5. Write your observation about the results from the table."
       ],
       "metadata": {
         "id": "6TaqVFp76OO-"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# TODO"
+      ],
+      "metadata": {
+        "id": "hO-QBBb0_3sy"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Table for question 1:\n",
+        "\n",
+        "| Model/Technique | Predict `X_new` | Probability | `decision_function` | Score\n",
+        "| --- | --- | --- | --- | --- |\n",
+        "| `Softmax Regression` |\n",
+        "| `Polynomial Kernel SVM (degree=10, ceof0=1, C=5)` |\n",
+        "| `Polynomial Kernel SVM` **(your suggested values)** |"
+      ],
+      "metadata": {
+        "id": "Qzv_yAnyAcrp"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Question 2\n",
+        "Train a grid search model to find the best combination to train SVM classifiers between `C` and `gamma` with `kernel = rbf` as follows:\n",
+        "```\n",
+        "para_grid = {'C': [0.1, 1, 10, 100, 1000],\n",
+        "            'gamma': [1, 0.1, 0.01, 0.001, 0.0001],\n",
+        "            'kernel': ['rbf]}\n",
+        "```\n",
+        "1. What are the best values for the hyperparameters?\n",
+        "2. What is the best score?"
+      ],
+      "metadata": {
+        "id": "qavBfyes_4-b"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# TODO"
+      ],
+      "metadata": {
+        "id": "Vm5GAdNTAyky"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
